--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
 -->
         <a-assets>
-      <a-asset-item id="object" src=".../assets/face1.obj"></a-asset-item>
-      <a-asset-item id="material" src=".../assets/face1.mtl"></a-asset-item>
+      <a-asset-item id="object" src="assets/face1.obj"></a-asset-item>
+      <a-asset-item id="material" src="assets/face1.mtl"></a-asset-item>
         </a-assets>
         <a-obj-model obj="#object" mtl="#material"></a-obj-model>
     </a-scene>
