--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   </head>
   <body>
-    <a-scene>
+    <a-scene background="color: #000000">
 <!--
       <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" opacity="0.7" shadow></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
@@ -18,7 +18,7 @@
       <a-asset-item id="object" src="assets/face1.obj"></a-asset-item>
       <a-asset-item id="material" src="assets/face1.mtl"></a-asset-item>
         </a-assets>
-        <a-obj-model obj="#object" mtl="#material" scale="0.1 0.1 0.1"></a-obj-model>
+        <a-obj-model obj="#object" mtl="#material" scale="10 10 10"></a-obj-model>
     </a-scene>
       
   </body>
