--- a/three.js-master/examples/webgl_loader_obj.html
+++ b/three.js-master/examples/webgl_loader_obj.html
@@ -98,7 +98,7 @@
 
 				var loader = new OBJLoader( manager );
 
-				loader.load( 'models/obj/face/face.obj', function ( obj ) {
+				loader.load( 'models/obj/face/dna.obj', function ( obj ) {
 
 					object = obj;
 
