--- a/three.js-master/examples/webgl_loader_obj.html
+++ b/three.js-master/examples/webgl_loader_obj.html
@@ -131,10 +131,10 @@
 
 			}
 
-			function onDocumentMouseMove( event ) {
-
-				mouseX = ( event.clientX - windowHalfX ) / 2;
-				mouseY = ( event.clientY - windowHalfY ) / 2;
+//			function onDocumentMouseMove( event ) {
+//
+//				mouseX = ( event.clientX - windowHalfX ) / 2;
+//				mouseY = ( event.clientY - windowHalfY ) / 2;
 
 			}
 
